--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 								<h1>Hi, 我是小祝</h1>
 							</header>
 							<div class="content">
-								<p>让我死之前，再看一眼《黄金时代》<br />
-								然后去趟海边，慢慢闭眼</p>
+								<p>学习至死<br />
+								才最浪漫</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">KNOW ME</a></li>
 								</ul>
